# CSV_DATA_READER

./: .gitignore  README.md  pyproject.toml
src/app/: config.py  csv_loader.py
